Update azure-pipelines.yml for Azure Pipelines
add the deployment configuration

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,3 +27,15 @@ stages:
         dockerfile: '$(Build.SourcesDirectory)/app/Dockerfile'
         tags: |
           $(tag)
+  - deployment: VMDeploy
+    displayName: web
+    pool:
+      vmImage: 'Windows Server 2008 R2 Datacenter'
+    environment:
+      name: DashboardRuntimeEnv
+      resourceType: VirtualMachine
+    strategy:
+        runOnce:
+          deploy:
+            steps:
+            - script: echo my first deployment
